# birds

./: README.md
src/: CMakeLists.txt  glwidget.cpp  glwidget.h  image.cpp  image.h  main.cpp  mainwindow.cpp  mainwindow.h  voronoi_visual_utils.hpp
